--- a/index.html
+++ b/index.html
@@ -10,32 +10,9 @@
   </head>
 
   <body>
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Yasiv <small>- npm visualization</small></a>
-      </div>
-
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <div class="row">
-          <div class="col-md-4">
-            <form class="navbar-form navbar-left " role="search">
-              <div class="input-group">
-                <span class="input-group-addon">npm search</span>
-                <input type="text" autofocus class="form-control" placeholder="package name">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" type="button">Go!</button>
-                </span>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-  <span xmlns:sj='require:./main.js'><sj:init></sj:init></span>
-  <script type="text/javascript" charset="utf-8" src='external/angular.min.js'></script>
-  <script type="text/javascript" charset="utf-8" src='bundle.js'></script>
+    <navbar></navbar>
+    <span xmlns:sj='require:./main.js'><sj:init></sj:init></span>
+    <script type="text/javascript" charset="utf-8" src='external/angular.js'></script>
+    <script type="text/javascript" charset="utf-8" src='bundle.js'></script>
   </body>
 </html>
