--- a/lib/navbar/navbar.html
+++ b/lib/navbar/navbar.html
@@ -10,7 +10,7 @@
           <form class="navbar-form navbar-left" role="search">
             <div class="input-group">
               <span class="input-group-addon">npm {{hello}} search</span>
-              <input type="text" autofocus class="form-control" placeholder="package name">
+              <input  type="text" autofocus class="form-control" placeholder="package name" autosuggest>
               <span class="input-group-btn">
                 <button class="btn btn-default" type="button">Go!</button>
               </span>
