--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="external/styles/bootstrap-theme.min.css">
   </head>
 
-  <body sj-app='npmviz'>
-    <navbar require='./lib/navbar/index.js'></navbar>
+  <body>
+    <navbar></navbar>
 
     <script type="text/javascript" charset="utf-8" src='external/angular.js'></script>
     <script type="text/javascript" charset="utf-8" src='bundle.js'></script>
