--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Visualization of NPM dependencies</title>
     <link rel="stylesheet" href="external/styles/bootstrap.min.css">
     <link rel="stylesheet" href="external/styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="external/styles/styles.css">
   </head>
 
   <body>
