--- a/lib/navbar/navbar.html
+++ b/lib/navbar/navbar.html
@@ -8,12 +8,20 @@
       <div class="row">
         <div class="col-md-4">
           <form class="navbar-form navbar-left" role="search">
-            <div class="input-group">
+            <div class="input-group typeahead-container">
               <span class="input-group-addon">npm {{hello}} search</span>
               <input  type="text" autofocus
                       ng-model='selectedPackage'
                       typeahead="pkg for pkg in getPackages($viewValue)"
+                      typeahead-input-formatter="formatPkg($model)"
+                      typeahead-template-url="packageMatch.html"
                       class="form-control" placeholder="package name">
+                <script type="text/ng-template" id="packageMatch.html">
+                  <a>
+                    <strong>{{match.model.id}}</strong>
+                    <small>{{match.model.value.description}}</small>
+                  </a>
+                </script>
               <span class="input-group-btn">
                 <button class="btn btn-default" type="button">Go!</button>
               </span>
