It is possible to use vanila angular too
This commit shows how to use regular angular module, which is written
with `an` wrapper

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
   <body ng-controller='mainController'>
     <navbar on-package-selected="onPackageSelected"></navbar>
+    <div ng-view></div>
 
     <script type="text/javascript" charset="utf-8" src='external/angular.js'></script>
+    <script type="text/javascript" charset="utf-8" src='external/angular-route.js'></script>
     <script type="text/javascript" charset="utf-8" src='bundle.js'></script>
   </body>
 </html>
