--- a/lib/navbar/navbar.html
+++ b/lib/navbar/navbar.html
@@ -19,8 +19,8 @@
                       class="form-control" placeholder="package name">
                 <script type="text/ng-template" id="packageMatch.html">
                   <a>
-                    <strong>{{match.model.id}}</strong>
-                    <small>{{match.model.value.description}}</small>
+                    <strong>{{match.model.name}}</strong>
+                    <small>{{match.model.description}}</small>
                   </a>
                 </script>
               <span class="input-group-btn">
