Simplified the structure

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="external/styles/styles.css">
   </head>
 
-  <body ng-controller='mainController'>
-    <navbar on-package-selected="onPackageSelected"></navbar>
+  <body>
+    <navbar></navbar>
     <div ng-view></div>
 
     <script type="text/javascript" charset="utf-8" src='external/angular.js'></script>
