Added naive visualization with fabric

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
   <body>
     <navbar></navbar>
-    <div ng-view></div>
+    <div ng-view class='full'></div>
 
     <script type="text/javascript" charset="utf-8" src='external/angular.js'></script>
     <script type="text/javascript" charset="utf-8" src='external/angular-route.js'></script>
+    <script type="text/javascript" charset="utf-8" src='external/fabric.js'></script>
     <script type="text/javascript" charset="utf-8" src='bundle.js'></script>
   </body>
 </html>
