--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -1,2 +1,14 @@
 <graph-viewer source='graph'>
+  <layers>
+    <layer name='links'></layer>
+    <layer name='nodes'></layer>
+    <layer name='labels'></layer>
+  </layers>
+  <node>
+    <rect width='10px' height='10px' layer='nodes'></rect>
+    <text layer='labels'>{{data.name}}</text>
+  </node>
+  <edge>
+    <arrow from='{{fromId}}' to='{{toId}}' layer='links'></arrow>
+  </edge>
 </graph-viewer>
