Added id to the rect

--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -5,7 +5,7 @@
     <layer name='labels'></layer>
   </layers>
   <node>
-    <rect width='10px' height='10px' layer='nodes'></rect>
+    <rect id='{{id}}' width='10px' height='10px' layer='nodes'></rect>
     <text layer='labels'>{{data.name}}</text>
   </node>
   <edge>
