Changed to id as node's label

--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -6,7 +6,7 @@
   </layers>
   <node>
     <rect id='{{id}}' width='10px' height='10px' layer='nodes'></rect>
-    <text layer='labels'>{{data.name}}</text>
+    <text layer='labels' y='-5'>{{id}}</text>
   </node>
   <edge>
     <arrow from='{{fromId}}' to='{{toId}}' layer='links'></arrow>
