--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -5,8 +5,8 @@
     <layer name='labels'></layer>
   </layers>
   <node>
-    <rect id='{{id}}' width='10px' height='10px' layer='nodes'></rect>
-    <text layer='labels' y='-5'>{{id}}</text>
+    <rect id='{{id}}' width='10px' fill='#4169E1' stroke='white' stroke-width='1px' height='10px' layer='nodes'></rect>
+    <text layer='labels' y='-5' fill='#B0C4DE'>{{id}}</text>
   </node>
   <edge>
     <arrow from='{{fromId}}' to='{{toId}}' layer='links'></arrow>
