--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -3,7 +3,7 @@
     <arrow from='{{fromId}}' to='{{toId}}'></arrow>
   </edge>
   <node>
-    <rect id='{{id}}' width='10px' height='10px'></rect>
-    <text y='-5'>{{id}}</text>
+    <rect fill='#00BFFF' width='10px' height='10px'></rect>
+    <text fill='#D3D3D3' y='-5'>{{id}}</text>
   </node>
 </graph-viewer>
