Updated link color

--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -1,6 +1,6 @@
 <graph-viewer source='graph'>
   <edge>
-    <arrow from='{{fromId}}' to='{{toId}}'></arrow>
+    <arrow stroke='#DCDCDC' from='{{pos.from}}' to='{{pos.to}}'></arrow>
   </edge>
   <node>
     <rect fill='#00BFFF' width='10px' height='10px'></rect>
