Moving to center of a node

--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -3,7 +3,7 @@
     <arrow stroke='#DCDCDC' from='{{pos.from}}' to='{{pos.to}}'></arrow>
   </edge>
   <node>
-    <rect fill='#00BFFF' width='10px' height='10px'></rect>
-    <text fill='#D3D3D3' y='-5'>{{id}}</text>
+    <rect x='-5' y='-5' fill='#00BFFF' width='10px' height='10px'></rect>
+    <text fill='#D3D3D3' y='-10' x='-5'>{{id}}</text>
   </node>
 </graph-viewer>
