Tweeking style again

--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -1,9 +1,11 @@
 <graph-viewer source='graph'>
   <edge>
-    <arrow stroke='#DCDCDC' from='{{pos.from}}' to='{{pos.to}}'></arrow>
+  <arrow stroke='#D3D3D3'
+         from='{{pos.from}}'
+         to='{{pos.to}}'></arrow>
   </edge>
   <node>
     <rect x='-5' y='-5' fill='#00BFFF' width='10px' height='10px'></rect>
-    <text fill='#D3D3D3' y='-10' x='-5'>{{id}}</text>
+    <text fill='gray' y='-10' x='-5'>{{id}}</text>
   </node>
 </graph-viewer>
