--- a/lib/navbar/navbar.html
+++ b/lib/navbar/navbar.html
@@ -1,35 +1,21 @@
-<nav class="navbar navbar-default" role="navigation" ng-controller='navbarController'>
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Yasiv <small>- npm visualization</small></a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <div class="row">
-        <div class="col-md-4">
-          <form class="navbar-form navbar-left" role="search">
-            <div class="input-group typeahead-container">
-              <span class="input-group-addon">npm search</span>
-              <input  type="text" autofocus
-                      ng-model='selectedPackage'
-                      typeahead="pkg for pkg in getPackages($viewValue)"
-                      typeahead-input-formatter="formatPkg($model)"
-                      typeahead-on-select='viewPackage($model)'
-                      typeahead-template-url="packageMatch.html"
-                      class="form-control" placeholder="package name">
-                <script type="text/ng-template" id="packageMatch.html">
-                  <a>
-                    <strong>{{match.model.id}}</strong>
-                    <small>{{match.model.value.description}}</small>
-                  </a>
-                </script>
-              <span class="input-group-btn">
-                <button class="btn btn-default" type="button">Go!</button>
-              </span>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+<form class="search" ng-controller='navbarController' role="search">
+  <div class="input-group typeahead-container">
+    <span class="input-group-addon">npm search</span>
+    <input  type="text" autofocus
+            ng-model='selectedPackage'
+            typeahead="pkg for pkg in getPackages($viewValue)"
+            typeahead-input-formatter="formatPkg($model)"
+            typeahead-on-select='viewPackage($model)'
+            typeahead-template-url="packageMatch.html"
+            class="form-control no-shadow" placeholder="package name">
+      <script type="text/ng-template" id="packageMatch.html">
+        <a>
+          <strong>{{match.model.id}}</strong>
+          <small>{{match.model.value.description}}</small>
+        </a>
+      </script>
+    <span class="input-group-btn">
+      <button class="btn btn-default" type="button">Go!</button>
+    </span>
   </div>
-</nav>
+</form>
