Even more styles tweaking

--- a/lib/navbar/navbar.html
+++ b/lib/navbar/navbar.html
@@ -15,7 +15,7 @@
         </a>
       </script>
     <span class="input-group-btn">
-      <button class="btn btn-default" type="button">Go!</button>
+      <button class="btn btn-primary" type="button">Go!</button>
     </span>
   </div>
 </form>
