Cleaned up mode switching

--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -1,4 +1,4 @@
-<graph-viewer source='graph' node-selected='onNodeSelected' mode='mode'>
+<graph-viewer source='graph' root='root' node-selected='onNodeSelected' mode='mode'>
   <edge>
   <arrow stroke='#D3D3D3'
          from='{{pos.from}}'
