Adding offset to links to show arrows

--- a/lib/viewer/index.html
+++ b/lib/viewer/index.html
@@ -2,10 +2,11 @@
   <edge>
   <arrow stroke='#D3D3D3'
          from='{{pos.from}}'
-         to='{{pos.to}}'></arrow>
+         to='{{pos.to}}'
+         offset='8'></arrow>
   </edge>
   <node >
-    <rect x='-5' y='-5' fill='#00BFFF' width='10px' height='10px'></rect>
+    <circle  fill='#00BFFF' r='5px'></circle>
     <text fill='gray' y='-10' x='-5'>{{id}}</text>
   </node>
 </graph-viewer>
