Split 2d and 3d into separate routes

--- a/lib/viewer/packageView.html
+++ b/lib/viewer/packageView.html
@@ -21,5 +21,5 @@
 </div>
 
 <div class='switchMode' ng-show='canSwitchMode'>
-  <button class="btn btn-xs btn-danger" ng-click="switchMode()" type="button">Show {{alternateMode}}</button>
+  <button class="btn btn-xs btn-danger" ng-click="switchMode()" type="button">Show 3D</button>
 </div>
