--- a/lib/viewer/2d/package2dView.html
+++ b/lib/viewer/2d/package2dView.html
@@ -5,8 +5,8 @@
            to='{{pos.to}}'
            offset='8'></arrow>
   </edge>
-  <node >
-    <circle  fill='#00BFFF' r='5px'></circle>
+  <node>
+    <circle fill='#CFCCDF' r='5px'></circle>
     <text fill='gray' y='-10' x='-5'>{{id}}</text>
   </node>
 </graph-viewer>
