--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <title>Visualization of NPM dependencies</title>
     <link rel="stylesheet" href="external/styles/bootstrap.min.css">
     <link rel="stylesheet" href="external/styles/styles.css">
