Moved to gulp as a build system

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <title>Visualization of NPM dependencies</title>
-    <link rel="stylesheet" href="external/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="external/styles/styles.css">
+    <link rel="stylesheet" href="styles/main.css">
   </head>
-
   <body>
     <navbar></navbar>
     <div ng-view class='full'></div>
 
-    <script type="text/javascript" charset="utf-8" src='external/angular.js'></script>
-    <script type="text/javascript" charset="utf-8" src='external/angular-route.js'></script>
+    <script type="text/javascript" charset="utf-8" src='external.min.js'></script>
     <script type="text/javascript" charset="utf-8" src='bundle.js'></script>
   </body>
 </html>
