Playing with styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Visualization of NPM dependencies</title>
     <link rel="stylesheet" href="styles/main.css">
   </head>
-  <body>
+  <body class='full'>
     <navbar></navbar>
     <div ng-view class='full'></div>
 
