--- a/src/scripts/navbar/navbar.html
+++ b/src/scripts/navbar/navbar.html
@@ -1,13 +1,13 @@
 <form class="search" ng-controller='navbarController' role="search">
   <div class="input-group typeahead-container">
-    <span class="input-group-addon">npm search</span>
     <input  type="text" autofocus
             ng-model='selectedPackage'
             typeahead="pkg for pkg in getPackages($viewValue)"
             typeahead-input-formatter="formatPkg($model)"
             typeahead-on-select='viewPackage($model)'
             typeahead-template-url="packageMatch.html"
-            class="form-control no-shadow" placeholder="package name">
+            class="form-control no-shadow"
+            placeholder="npm package (e.g. browserify)">
       <script type="text/ng-template" id="packageMatch.html">
         <a>
           <strong>{{match.model.id}}</strong>
@@ -15,7 +15,7 @@
         </a>
       </script>
     <span class="input-group-btn">
-      <button class="btn btn-primary" type="button">Go!</button>
+      <button class="btn" type="button">show</button>
     </span>
   </div>
 </form>
