--- a/src/scripts/viewer/2d/package2dView.html
+++ b/src/scripts/viewer/2d/package2dView.html
@@ -13,7 +13,7 @@
 
 <div class='packageInfo' ng-show='selectedPackage'>
   <a ng-href='https://npmjs.org/package/{{selectedPackage.name}}'>{{selectedPackage.name}}</a>
-  <span class='version'>{{selectedPackage.version}}</span>
+  <span class='version' title="version">{{selectedPackage.version}}</span>
   <hr class='divider'>
   <p class='description'>
     {{selectedPackage.description}}
