Added total number of nodes/links

--- a/src/scripts/viewer/2d/package2dView.html
+++ b/src/scripts/viewer/2d/package2dView.html
@@ -26,6 +26,18 @@
         <img ng-src="{{maintainer.avatar}}" />
       </a>
     </div>
+    <div class='clearfix'></div>
+  </div>
+  <div class='graphInfo'>
+    <hr>
+    <div class='nodes'>
+      <p>NODES TOTAL</p>
+      <p class='number'>{{nodesCount}}</p>
+    </div>
+    <div class='links'>
+      <p>LINKS TOTAL</p>
+      <p class='number'>{{linksCount}}</p>
+    </div>
   </div>
 </div>
 
