actually i like lower case more

--- a/src/scripts/viewer/2d/package2dView.html
+++ b/src/scripts/viewer/2d/package2dView.html
@@ -20,7 +20,7 @@
   </p>
   <pre class="sh sh_sourceCode"><code>npm install {{selectedPackage.name}}</code></pre>
   <div class='maintainers'>
-    <div>Maintainers</div>
+    <div>maintainers</div>
     <div ng-repeat="maintainer in maintainers" class='maintainerBox'>
       <a href="#" ng-href='{{maintainer.profile}}' target="_blank">
         <img ng-src="{{maintainer.avatar}}" />
@@ -31,11 +31,11 @@
   <div class='graphInfo'>
     <hr>
     <div class='nodes'>
-      <p>NODES TOTAL</p>
+      <p>nodes total</p>
       <p class='number'>{{nodesCount}}</p>
     </div>
     <div class='links'>
-      <p>LINKS TOTAL</p>
+      <p>links total</p>
       <p class='number'>{{linksCount}}</p>
     </div>
   </div>
