Different centering for different modes

--- a/src/scripts/viewer/2d/package2dView.html
+++ b/src/scripts/viewer/2d/package2dView.html
@@ -63,6 +63,6 @@
   </div>
   </div>
 </div>
-<div class='switchMode' ng-show='canSwitchMode'>
+<div class='switchMode d2d' ng-show='canSwitchMode'>
   <button class="btn btn-xs btn-danger" ng-click="switchMode()" type="button">Show 3D</button>
 </div>
