--- a/src/scripts/viewer/3d/package3dView.html
+++ b/src/scripts/viewer/3d/package3dView.html
@@ -1,4 +1,4 @@
-<div class="graphView"></div>
+<div class='graphView'></div>
 <div class='switchMode' ng-show='canSwitchMode'>
   <button class="btn btn-xs btn-danger" ng-click="switchMode()" type="button">Show 2D</button>
   <!--button class="btn btn-xs btn-danger" ng-click="exportModel()" type="button">Export Model</button-->
