--- a/src/scripts/viewer/2d/package2dView.html
+++ b/src/scripts/viewer/2d/package2dView.html
@@ -29,7 +29,7 @@
     </p>
     <pre class="sh sh_sourceCode"><code>npm install {{selectedPackage.name}}</code></pre>
     <div class='maintainers'>
-      <div>maintainers</div>
+      <div>package maintainers</div>
       <div class='maintainersContainer'>
         <div ng-repeat="maintainer in maintainers" class='maintainerBox'>
           <a href="#" ng-href='{{maintainer.profile}}' target="_blank">
@@ -42,27 +42,26 @@
   </div>
   <div class='graphInfo ng-cloak' ng-show='graphInfoVisible'>
     <div class='nodes'>
-      <p>nodes total</p>
+      <p># of nodes</p>
       <p class='number'>{{nodesCount}}</p>
     </div>
     <div class='links'>
-      <p>links total</p>
+      <p># of links</p>
       <p class='number'>{{linksCount}}</p>
     </div>
     <div class="clearfix"></div>
     <hr>
-  <div class='all-authors'>
-    <div>all authors</div>
+  <div class='all-maintainers'>
+    <div>graph maintainers</div>
     <div class='maintainersContainer'>
-      <div ng-repeat="author in authors" class='maintainerBox'
-          >
-        <a href="#" ng-href='{{author.profile}}' target="_blank">
-          <img ng-src="{{author.avatar}}"
-            ng-mouseenter='author.countVisible = true'
-            ng-mouseleave='author.countVisible = false'/>
+      <div ng-repeat="maintainer in allMaintainers" class='maintainerBox'>
+        <a href="#" ng-href='{{maintainer.profile}}' target="_blank">
+          <img ng-src="{{maintainer.avatar}}"
+            ng-mouseenter='maintainer.countVisible = true'
+            ng-mouseleave='maintainer.countVisible = false'/>
         </a>
-        <span class='packagesCount' ng-show='author.countVisible'>
-          x {{author.count}}
+        <span class='packagesCount' ng-show='maintainer.countVisible'>
+          x {{maintainer.count}}
         </span>
       </div>
     </div>
