--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,15 @@
 
     <script type="text/javascript" charset="utf-8" src='external.min.js'></script>
     <script type="text/javascript" charset="utf-8" src='bundle.js'></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-54546700-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
