Show info only when loaded graph

--- a/src/scripts/viewer/2d/package2dView.html
+++ b/src/scripts/viewer/2d/package2dView.html
@@ -11,7 +11,7 @@
   </node>
 </graph-viewer>
 
-<div class='infoBox' ng-show='selectedPackage'>
+<div class='infoBox' ng-show='graphLoaded'>
   <div class='header'>
     <a ng-click='switchInfoMode("package", $event)' href='#'
       ng-class='{"selected": packageInfoVisible}'>package info</a>
