--- a/src/scripts/viewer/2d/package2dView.html
+++ b/src/scripts/viewer/2d/package2dView.html
@@ -11,85 +11,17 @@
   </node>
 </graph-viewer>
 
-<div class='infoBox' ng-show='graphLoaded'>
-  <div class='header'>
-    <a ng-click='switchInfoMode("package", $event)' href='#'
-      ng-class='{"selected": packageInfoVisible}'>package info</a>
-    <a ng-click='switchInfoMode("graph", $event)' href='#'
-      ng-class='{"selected": graphInfoVisible}'
-      class='last'>graph info</a>
-    <div class='clearfix'></div>
-  </div>
-  <hr class='divider'>
-  <div class='packageInfo ng-cloak' ng-show='packageInfoVisible'>
-    <a ng-href='https://npmjs.org/package/{{selectedPackage.name}}'>{{selectedPackage.name}}</a>
-    <span class='version' title="version">{{selectedPackage.version}}</span>
-    <p class='description'>
-      {{selectedPackage.description}}
-    </p>
-    <pre class="sh sh_sourceCode"><code>npm install {{selectedPackage.name}}</code></pre>
-    <div class='maintainers'>
-      <h4>maintainers</h4>
-      <div class='maintainersContainer'>
-        <div ng-repeat="maintainer in maintainers" class='maintainerBox'>
-          <a href="#" ng-href='{{maintainer.profile}}' target="_blank">
-            <img ng-src="{{maintainer.avatar}}" />
-          </a>
-        </div>
-      </div>
-      <div class='clearfix'></div>
-    </div>
-  </div>
-  <div class='graphInfo ng-cloak' ng-show='graphInfoVisible'>
-    <div class='nodes'>
-      <p># of nodes</p>
-      <p class='number'>{{nodesCount}}</p>
-    </div>
-    <div class='links'>
-      <p># of links</p>
-      <p class='number'>{{linksCount}}</p>
-    </div>
-    <div class="clearfix"></div>
-    <hr>
-    <div class='all-maintainers'>
-      <h4>maintainers</h4>
-      <div class='maintainersContainer'>
-        <div ng-repeat="maintainer in allMaintainers" class='maintainerBox'>
-          <a href="#" ng-href='{{maintainer.profile}}' target="_blank">
-            <img ng-src="{{maintainer.avatar}}"
-              ng-mouseenter='maintainer.countVisible = true'
-              ng-mouseleave='maintainer.countVisible = false'/>
-          </a>
-          <span class='packagesCount' ng-show='maintainer.countVisible'>
-            x {{maintainer.count}}
-          </span>
-        </div>
-      </div>
-      <div class='clearfix'></div>
-    </div>
-    <hr>
-    <div class='all-licenses'>
-      <h4>licenses</h4>
-      <div class='license-container'>
-        <a ng-repeat="license in allLicenses" class='license-row' href='#'
-           ng-click="highlightNodes(license, $event)">
-          <span>{{license.name}}</span>
-          <span class='last'>{{license.count}}</span>
-        </a>
-      </div>
-      <div class='clearfix'></div>
-    </div>
-  </div>
-</div>
+<package-info graph='graph'></package-info>
 
-<div ng-show='isError' class='failed'>
+<div ng-show='showError' class='failed'>
   <h4>{{error}}</h4>
   <pre>{{errorData | json}}</pre>
 </div>
 
-<div ng-hide='graphLoaded || isError' class='graph-progress'>
+<div ng-show='showProgress' class='graph-progress'>
   <h4>Remaining packages: <span>{{progress}}</span></h4>
 </div>
-<div class='switchMode d2d' ng-show='canSwitchMode'>
+
+<div ng-show='showSwitchMode' class='switchMode d2d'>
   <button class="btn btn-xs btn-danger" ng-click="switchMode()" type="button">Show 3D</button>
 </div>
