--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Visualization of NPM dependencies</title>
-    <meta name="description" content="Visualization of node.js dependencies">
+    <title>Visualization of npm dependencies</title>
+    <meta name="description" content="Visualization of npm dependencies">
     <meta name="keywords" content="visualization, graph drawing, npm, npm graph, package licenses, anvaka, kashcha, andrei" />
     <link rel="stylesheet" href="styles/main.css">
   </head>
